--- a/shop/frontend/static/css/users/login.css
+++ b/shop/frontend/static/css/users/login.css
@@ -117,6 +117,12 @@ li {
     font-weight: 400;
     padding: 10px 50px;
     display: block;
+    transition: all .2s;
+}
+
+.submit:hover {
+    background-color: #ed0722;
+    color: #fff;
 }
 
 .login__link {
@@ -149,6 +155,13 @@ li {
      border-radius: 3px;
      padding: 10px 50px;
      display: block;
+     transition: all .2s;
+     text-align: center;
+}
+
+.google:hover {
+    background-color: blue;
+    color: #fff;
 }
 
 #id_captcha_1 {
