change template for catalog

--- a/shop/frontend/static/css/catalog/catalog.css
+++ b/shop/frontend/static/css/catalog/catalog.css
@@ -105,6 +105,10 @@ li {
     margin-top: 10px;
 }
 
+.categories__empty {
+    margin-top: 15px;
+}
+
 .product {
     padding: 20px;
     border: 1px solid #000;
